# SCICoNE

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  conan_graph.html  conanfile.txt  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: build.yml
cr_out/outs/: cnv_data.h5
docs/: tutorial.md
docs/example_data/: 5nodes_10regions_10000reads_test_d_mat.csv  5nodes_10regions_10000reads_test_d_mat_segmented_counts.txt  5nodes_10regions_10000reads_test_d_mat_segmented_counts_cluster_assignments.txt  5nodes_10regions_10000reads_test_d_mat_segmented_counts_cluster_sizes.txt  5nodes_10regions_10000reads_test_d_mat_segmented_counts_condensed.txt  5nodes_10regions_10000reads_test_ground_truth.csv  5nodes_10regions_10000reads_test_tree.txt  cluster_acceptance_ratio.csv  cluster_attachment_scores.csv  cluster_cell_node_ids.tsv  cluster_cell_region_cnvs.csv  cluster_gamma_values.csv  cluster_inferred_cnvs.csv  cluster_markov_chain.csv  cluster_rel_markov_chain.csv  cluster_tree_inferred.graphviz  cluster_tree_inferred.txt  test_acceptance_ratio.csv  test_attachment_scores.csv  test_cell_node_ids.tsv  test_cell_region_cnvs.csv  test_inferred_cnvs.csv  test_markov_chain.csv  test_nb_lm.cpp  test_nb_lm.py  test_rel_markov_chain.csv  test_segmented_region_sizes.txt  test_segmented_regions.txt  test_tree_inferred.graphviz  test_tree_inferred.txt
docs/notebooks/: tutorial.ipynb
example_data/: 5nodes_10regions_10000reads_test_cell_node_ids.tsv  5nodes_10regions_10000reads_test_region_sizes.txt
include/stats/misc/: matrix_ops.hpp
include/stats/rand/: rlnorm.hpp
input_data/: norm_counts.tsv
notebooks/: 10xGenomicsFilterArtifacts.ipynb  BreakpointDetection.ipynb  Evaluate breakpoint detection simulation.ipynb  IterativeSimulationsRobustness.ipynb  SimulationResults.ipynb  tiny_cnv_data.ipynb  tutorial.ipynb
notebooks/bp_classifier_roc/: 10nodes_40regions_10000reads_sim_tiny2_d_mat.txt  10nodes_40regions_10000reads_sim_tiny2_effective_regions.txt  10nodes_40regions_10000reads_sim_tiny2_ground_truth.txt  10nodes_40regions_10000reads_sim_tiny2_region_sizes.txt  10nodes_40regions_10000reads_sim_tiny2_tree.txt  Breakpoint Classifier Performance - Multiple Runs.ipynb  Breakpoint Classifier Performance.ipynb  all_bps_comparison_sim_tiny2.csv
notebooks/manuscript_simulations_max_tree_reproducibility/: determining_n_iters_512_coeff.csv
pyscicone/: MANIFEST.in  README.md  default.profraw  environment.yml  requirements.txt  setup.py
pyscicone/scicone/: __init__.py  constants.py  plotting.py  scicone.py  tree.py  utils.py  utils_10x.py
pyscicone/scicone/data/: cancer_gene_census.csv
pyscicone/scripts/: convert_to_graphviz.py
pyscicone/tests/: default.profraw  test_scicone.py
reproducibility/real_data/: inference_real_data_snakefile.py
reproducibility/simulations/: aggregate_simulation_results.py  benchmark.json  benchmark.smk  conet_comparison.json  conet_comparison.smk  config.json  readme.md  run_scicone_recommended_params.py  simulations.smk
reproducibility/simulations/conet_comparisons/: conet_tree_distances.py
reproducibility/simulations/other_methods/: HMMCopyInference.R  HierarchicalCopyInference.R  ginkgo.R  run_conet.py  scope.R
reproducibility/workflows/: benchmark_realdata_snakefile.py  infer_simulated_tree_no_bps.smk  self_benchmark_config.json
reproducibility/workflows/30nodes_segment_jobs/: self_benchmark_config_30_nodes.json
reproducibility/workflows/bp_detection_performance/: bp_snakefile.py  config.json
reproducibility/workflows/simulations_determining_n_iters/: self_benchmark_config_10_nodes.json
scicone/: CMakeLists.txt  Config.h.in  reference.md  scicone.py
scicone/simulations/: Simulation.h  run_simulations.cpp
scicone/simulations/sample_simulation/: 10nodes_10regions_1000reads_sim_tiny_region_sizes.txt
scicone/src/: CustomExceptions.h  Inference.h  Lgamma.cpp  Lgamma.h  MathOp.cpp  MathOp.h  Node.h  SignalProcessing.cpp  SignalProcessing.h  SingletonRandomGenerator.h  Tree.h  Utils.cpp  Utils.h  breakpoint_detection.cpp  globals.cpp  infer_trees.cpp  score_tree.cpp
scicone/tests/: run_tests.cpp  save_root_score_per_nu.cpp  validation.h
scicone/tests/bp_detection/: 10nodes_40regions_100000reads_sim_tiny_1000bins_d_mat.csv
scicone/tests/trees_to_validate/: invalid_tree_2.txt  invalid_tree_3.txt  invalid_tree_4.txt
scripts/: compute_pdist.py  compute_tree_distances.py  condense_clusters.py  evaluate_bp_detection.py  example.sh  run_multiple.sh  run_phenograph.py  segment_counts.py
simulations/: Simulation.h  run_simulations.cpp  simulations_main.cpp
simulations/sample_simulation/: 10nodes_10regions_1000reads_sim_tiny_d_mat.txt  10nodes_10regions_1000reads_sim_tiny_ground_truth.txt  10nodes_10regions_1000reads_sim_tiny_tree.txt
src/: BinaryTree.cpp  BinaryTree.h  CustomExceptions.h  Inference.cpp  Inference.h  Lgamma.cpp  Lgamma.h  MathOp.cpp  MathOp.h  Node.h  SignalProcessing.cpp  SignalProcessing.h  SingletonRandomGenerator.h  Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h  Utils.cpp  Utils.h  breakpoint_detection.cpp  globals.cpp  infer_trees.cpp  main.cpp  score_tree.cpp
tests/: run_tests.cpp  save_root_score_per_nu.cpp  validation.h
tests/trees_to_validate/: invalid_tree_1.txt  invalid_tree_2.txt  invalid_tree_3.txt  invalid_tree_4.txt  valid_tree_1.txt  valid_tree_2.txt
workflows/: HMMCopyInference.R  config.json  realdata_size_limited_snakefile.py  self_benchmark_config.json  self_benchmark_snakefile.py  snakefile_simulations.py
workflows/10nodes_segment_jobs/: self_benchmark_config_10_nodes.json
workflows/20nodes_segment_jobs/: self_benchmark_config_20_nodes.json
workflows/30nodes_segment_jobs/: self_benchmark_config_30_nodes.json
workflows/bp_detection_performance/: bp_snakefile.py  config.json
workflows/bp_detection_performance/results/: 10nodes_40regions_10000reads_simdata_0_d_mat.txt  10nodes_40regions_10000reads_simdata_1_d_mat.txt  (+7 more)
workflows/simulations_determining_n_iters/: self_benchmark_config_10_nodes.json
workflows/size_limited_real_data/: config.json
(+32 files in other folders)
